--- a/dream/scss/style.scss
+++ b/dream/scss/style.scss
@@ -198,7 +198,7 @@ $u_percentage: 100%;
     =========== */
 
 $color_t_std: #929597;
-$color_t_link: #1400FF;
+$color_t_link: #171717;
 $color_t_link_hover: #6a78ff;
 
 $color_bk_body: #f7fafa;
