--- a/dream/css/style.css
+++ b/dream/css/style.css
@@ -615,12 +615,12 @@ div.main .true-dreams article > a:hover {
   text-decoration: none;
 }
 div.main .true-dreams article:hover .needs .indicator {
-  -webkit-transform: rotateZ(30deg);
-  -moz-transform: rotateZ(30deg);
-  -ms-transform: rotateZ(30deg);
-  -o-transform: rotateZ(30deg);
-  transform: rotateZ(30deg);
   background-position: 19.8px 0 !important;
+  -webkit-transform: rotate(30deg);
+  -moz-transform: rotate(30deg);
+  -ms-transform: rotate(30deg);
+  -o-transform: rotate(30deg);
+  transform: rotate(30deg);
 }
 div.main .true-dreams article .about {
   border: 1px solid #d9d9de;
@@ -687,7 +687,7 @@ div.main .true-dreams article .needs .left .inner-green {
   overflow: hidden;
 }
 div.main .true-dreams article .needs .left .inner-green .indicator {
-  background: url("../img/bk_indicator.png") no-repeat 100px 0;
+  background: url("../img/bk_indicator.png") no-repeat -100px 0;
   width: 100%;
   height: 100%;
   -webkit-transition: all 1s ease;
