--- a/dream/css/style.no-query.css
+++ b/dream/css/style.no-query.css
@@ -414,13 +414,69 @@ header.header .user a:nth-child(2) {
 header.header .user a:nth-child(2) img {
   width: 26px;
 }
-header.header .user a:nth-child(3) {
+header.header .user .personal {
+  display: inline-block;
+  padding: 0 5px;
+  vertical-align: middle;
   text-align: left;
   color: #1d1d1d;
   font-family: 'Helvetica Neue Cyr Light';
   font-weight: 700;
-  width: 25px;
-  background: url("../img/bk_user_menu.png") no-repeat 100% 45%;
+}
+header.header .user .personal .chosen-container {
+  font-weight: 500;
+  display: inline-block;
+  font-size: 0.8em;
+  width: auto !important;
+}
+header.header .user .personal .chosen-container .chosen-single {
+  background: none !important;
+  padding: 0;
+  width: 15px;
+}
+header.header .user .personal .chosen-container .chosen-single div b:active, header.header .user .personal .chosen-container .chosen-single div b:focus, header.header .user .personal .chosen-container .chosen-single div b:hover {
+  text-shadow: none !important;
+  box-shadow: none !important;
+  border: none !important;
+}
+header.header .user .personal .chosen-container .chosen-drop {
+  width: 150px;
+}
+header.header .user .personal .chosen-container .chosen-drop .chosen-results {
+  background: white;
+  color: black;
+  margin: 0;
+  padding: 0;
+}
+
+.menu-container {
+  background: white;
+  border-bottom: 5px solid #d9d9de;
+}
+.menu-container nav {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.menu-container nav li {
+  width: 16.16667%;
+  display: block;
+  float: left;
+  background: #eaeaea;
+  text-align: center;
+}
+.menu-container nav li:hover {
+  background: #3edc7e;
+}
+.menu-container nav li a {
+  display: block;
+  width: 100%;
+  padding: 30px 0;
+}
+.menu-container nav li a:hover {
+  text-decoration: none;
+}
+.menu-container nav li + li {
+  margin-left: 0.5%;
 }
 
 .footer-container {
@@ -637,11 +693,11 @@ div.main .true-dreams header a {
   display: block;
 }
 div.main .true-dreams article + article {
-  margin-left: 3%;
+  margin-left: 2%;
 }
 div.main .true-dreams article {
   float: left;
-  width: 22.75%;
+  width: 23.5%;
   background: white;
   font-size: 0.875em;
 }
@@ -1871,6 +1927,71 @@ div.main .doit .cell .hover p {
 div.main .doit .cell .hover h4 {
   text-transform: none;
   margin: 10px 0 0;
+}
+
+body.dreams .center {
+  float: left;
+  width: 75%;
+}
+body.dreams aside {
+  width: 20%;
+  float: left;
+  margin-right: 5%;
+  font-size: 0.8em;
+}
+body.dreams aside h3 {
+  color: #242424;
+}
+body.dreams aside section input[type="text"] {
+  width: 90%;
+  padding: 7px 5px;
+  font-size: 0.8em;
+}
+body.dreams aside section input[type="number"] {
+  width: 12%;
+}
+body.dreams aside section input[type="range"] {
+  width: 68%;
+}
+body.dreams aside section span {
+  color: #5d5d5d;
+  display: block;
+}
+body.dreams aside section input + span {
+  margin-top: 10px;
+}
+body.dreams aside section input[type="radio"] + span {
+  display: inline-block;
+  width: 88%;
+  margin-left: 5px;
+}
+body.dreams div.main {
+  margin-top: 15px;
+}
+body.dreams div.main header {
+  margin-bottom: 0;
+}
+body.dreams div.main header a {
+  color: #242424;
+  padding: 20px 10px;
+  margin-left: 15px;
+  float: left;
+}
+body.dreams div.main header a.active {
+  color: #2bde73;
+}
+body.dreams div.main header .tbd {
+  font-family: 'HarabaraBold' !important;
+}
+body.dreams div.main article .tbd {
+  font-family: 'HarabaraBold' !important;
+  display: block;
+  text-align: center;
+  color: #bdbebf;
+  font-size: 1.3em;
+}
+body.dreams div.main section > .dreams {
+  margin-bottom: 15px;
 }
 
 /*********************
