--- a/bwpo11/bitrix/templates/webpro_theme/template_styles.css
+++ b/bwpo11/bitrix/templates/webpro_theme/template_styles.css
@@ -602,6 +602,63 @@ a.jqzoom {
 }
 #port_more {left: 100px !important; top: 1850px !important;}
 
+#form-telephone {
+    position: fixed;
+    top: 200px;
+    right: -85px;
+}
+#form-telephone .text {
+    text-align: center;
+    vertical-align: middle;
+
+    -webkit-transform: rotate(-90deg); /* не забываем префиксные свойства */
+    -moz-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+}
+#form-telephone a {
+    padding: 15px 15px 22px;
+    background: rgba(240, 248, 255, 0.75);
+    color: white;
+    text-shadow: 0 0 5px black;
+    text-decoration: none;
+    font-size: 1.8em;
+    font-weight: 700;
+    border-radius: 15px 15px 0 0;
+    border: 1px solid rgba(0,0,0,0.5);
+}
+#tel-content .form1 {
+    background: #f5f5f5;
+    height: 250px;
+}
+#tel-content table.form-table {background: transparent;}
+#tel-content .form1 input[type="text"] {
+    width: 230px;
+    border-radius: 4px;
+    height: 40px;
+    margin: 16px auto;
+    font-size: 19px;
+    font-family: HelveticaLight;
+    color: #8D8D8D;
+    padding: 0 20px;
+    box-shadow: inset 0 0 7px rgba(0,0,0,0.5);
+}
+#tel-content .form1 input[type="submit"] {
+    margin-left: 60px;
+    margin-top: 10px;
+    font-size: 22px;
+    color: white;
+    text-decoration: none;
+    border: 0px;
+    padding: 10px 20px;
+    border-radius: 3px;
+    background: rgb(180, 30, 30);
+    box-shadow: 0 -5px rgb(145, 37, 37) inset;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
 .form-zakaz div>p {margin: 0; position: relative;}
 .form-zakaz > p {margin: 0; position: relative;}
 .form-zakaz div>p>.errortext {margin: 0; position: absolute; left: 120%; width: 180px; padding: 2px; background: white;}
