--- a/dream/scss/breakpoints/_break_on_layout.scss
+++ b/dream/scss/breakpoints/_break_on_layout.scss
@@ -564,8 +564,10 @@ Pages Styles
             .percentage {
               position: absolute;
               top: 22px;
-              left: 17px;
+              left: 6px;
               z-index: 10;
+              width: 48px;
+              text-align: center;
             }
           }
 
