--- a/dream/css/style.no-query.css
+++ b/dream/css/style.no-query.css
@@ -791,8 +791,10 @@ Pages Styles
 .true-dreams article .needs .left .radial-progress .percentage {
   position: absolute;
   top: 22px;
-  left: 17px;
+  left: 6px;
   z-index: 10;
+  width: 48px;
+  text-align: center;
 }
 .true-dreams article .needs .right {
   float: left;
